--- a/www/app/views/projects/projectForm.scala.html
+++ b/www/app/views/projects/projectForm.scala.html
@@ -5,16 +5,7 @@
 
 <fieldset>
 
-    @if(orgs.size == 1) {
-      <input type='hidden' name='organization_guid' value='@orgs.head.guid' />
-    } else {
-      @helper.select(
-          form("organization_guid"),
-          Seq( ("" -> "-- select --") ) ++ orgs.map( v => (v.guid.toString -> v.key) ),
-          '_label -> "Organization",
-          '_error -> form.error("organization_guid")
-      )
-    }
+    @organizations.select(orgs, form("organization_guid"), form.error("organization_guid"))
 
     @helper.inputText(
         form("name"),
