Add find subscriptions by user identifier

--- a/api/app/views/emails/dailySummary.scala.html
+++ b/api/app/views/emails/dailySummary.scala.html
@@ -14,7 +14,7 @@
 
     This is your personalized daily summary of dependency
     recommendations. At any time, you can unsubscribe by
-    visiting <a href="@urls.www(urls.subscriptions(recipient.identifier))">@urls.www(urls.subscriptionsRawUrl)</a>
+    visiting <a href="@urls.www(urls.subscriptions(Some(recipient.identifier)))">@urls.www(urls.subscriptions(None))</a>
 
   </p>
 
