--- a/api/app/views/emails/footer.scala.html
+++ b/api/app/views/emails/footer.scala.html
@@ -15,5 +15,5 @@
 
 <p>
   This email was sent to @recipient.email.
-  <a href="@urls.www(urls.subscriptions(recipient.identifier))">Unsubscribe or update preferences</a>
+  <a href="@urls.www(urls.subscriptions(Some(recipient.identifier)))">Unsubscribe or update preferences</a>
 </p>
