--- a/www/app/views/mainNavbar.scala.html
+++ b/www/app/views/mainNavbar.scala.html
@@ -27,7 +27,8 @@
             @data.user.get.email <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="/logout">Logout</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.OrganizationsController.index()">Organizations</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="@routes.LogoutController.index()">Logout</a></li>
           </ul>
         </div>
       }
