--- a/www/app/views/projects/index.scala.html
+++ b/www/app/views/projects/index.scala.html
@@ -13,7 +13,7 @@
     <em>No projects</em>
 
   } else {
-    @table(projects)
+    @table(projects.items)
 
     @if(projects.hasPrevious || projects.hasNext) {
       <ul class="pager">
