--- a/www/app/views/projects/table.scala.html
+++ b/www/app/views/projects/table.scala.html
@@ -1,8 +1,8 @@
-@(projects: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.Project])
+@(projects: Seq[com.bryzek.dependency.v0.models.Project])
 
 <div class="table-responsive">
   <table class="table">
-    @projects.items.map { p =>
+    @projects.map { p =>
       <tr>
         <td><a href="@routes.ProjectsController.show(p.guid)">@{p.name}</a></td>
       </tr>
