--- a/www/app/views/organizations/show.scala.html
+++ b/www/app/views/organizations/show.scala.html
@@ -7,9 +7,12 @@
 @main(data.copy(title = Some(organization.key))) {
 
   <div class="pull-right">
+    <a href="@routes.MembersController.index(organization.key)">Members</a>
+
     @if(com.bryzek.dependency.www.lib.Permissions.Organization.edit(organization, data.user)) {
-      <a href="@routes.OrganizationsController.edit(organization.key)">Edit</a>
+      | <a href="@routes.OrganizationsController.edit(organization.key)">Edit</a>
     }
+
     @if(com.bryzek.dependency.www.lib.Permissions.Organization.delete(organization, data.user)) {
       | <a class="delete" data-confirm="Are you sure?" href="@routes.OrganizationsController.postDelete(organization.key)">Delete</a>
     }
