Add links to the owner

--- a/www/app/views/projects/show.scala.html
+++ b/www/app/views/projects/show.scala.html
@@ -24,6 +24,7 @@
   </div>
 
   <ul>
+    <li>Owner: <a href="@routes.OrganizationsController.show(project.organization.key)">@project.organization.key</a></li>
     <li>Visbility: @project.visibility.toString</li>
     <li>SCMS: @project.scms.toString</li>
     <li>URI: <a href="@project.uri">@project.uri</a></li>
