--- a/www/app/views/resolvers/show.scala.html
+++ b/www/app/views/resolvers/show.scala.html
@@ -14,9 +14,9 @@
 
   <ul>
     <li>URI: <a href="@resolver.uri">@resolver.uri</a></li>
-    <li>Organization: @{resolver.organization match {
-         case None => "N/A"
-         case Some(org) => Html(s"<a href=#>${org.key}</a>")
+    <li>Owner: @{resolver.organization match {
+         case None => "Public"
+         case Some(org) => Html(s"<a href='${routes.OrganizationsController.show(org.key)}'>${org.key}</a>")
       }}
     </li>
     <li>Visibility: @resolver.visibility.toString</li>
