--- a/www/app/views/projects/table.scala.html
+++ b/www/app/views/projects/table.scala.html
@@ -2,8 +2,13 @@
 
 <div class="table-responsive">
   <table class="table">
+    <tr>
+      <th>Owner</th>
+      <th>Resolver URI</th>
+    </tr>
     @projects.map { p =>
       <tr>
+        <td><a href="@routes.OrganizationsController.show(p.organization.key)">@{p.organization.key}</a></td>
         <td><a href="@routes.ProjectsController.show(p.guid)">@{p.name}</a></td>
       </tr>
     }
