--- a/www/app/views/projects/github.scala.html
+++ b/www/app/views/projects/github.scala.html
@@ -1,39 +1,22 @@
 @(
   data: com.bryzek.dependency.www.lib.UiData,
-  repositories: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.Repository],
-  errorMessages: Seq[String] = Nil
+  orgs: Seq[com.bryzek.dependency.v0.models.Organization]
 )(implicit flash: Flash, messages: Messages)
 
-@main(data.copy(title = Some("Add project")), errorMessages = errorMessages) {
+@main(data.copy(title = Some("Add project - Select organization"))) {
 
   <div class="pull-right">
     <span class="glyphicon glyphicon-plus"></span> <a href="@routes.ProjectsController.create()">Add project manually</a>
   </div>
 
-  @if(repositories.items.isEmpty) {
-    <em>No repositories were found that are not already added as projects.</em>
-  } else {
-    <div class="table-responsive">
-      <table class="table">
-        @repositories.items.map { repo =>
-          <tr>
-            <td><a class="postForm" href="@routes.ProjectsController.postGithub(repo.name, repositories.page)">@{repo.name}</a></td>
-            <td>@repo.uri</td>
-          </tr>
-        }
-      </table>
-
-      @if(repositories.hasPrevious || repositories.hasNext) {
-        <ul class="pager">
-          @if(repositories.hasPrevious) {
-            <li><a href="@routes.ProjectsController.github(repositories.page - 1)">Previous</a></li>
-         }
-          @if(repositories.hasNext) {
-           <li><a href="@routes.ProjectsController.github(repositories.page + 1)">Next</a></li>
-          }
-        </ul>
+  <div class="table-responsive">
+    <table class="table">
+      @orgs.map { org =>
+        <tr>
+          <td><a href="@routes.ProjectsController.githubOrg(org.key)">@{org.key}</a></td>
+        </tr>
       }
-    </div>
-  }
+    </table>
+  </div>
 
 }
