--- a/www/app/views/projects/table.scala.html
+++ b/www/app/views/projects/table.scala.html
@@ -4,7 +4,7 @@
   <table class="table">
     <tr>
       <th>Owner</th>
-      <th>Resolver URI</th>
+      <th>Project</th>
     </tr>
     @projects.map { p =>
       <tr>
