--- a/www/app/views/index.scala.html
+++ b/www/app/views/index.scala.html
@@ -9,9 +9,7 @@
 
     <p><em>We do not have any upgrade recommendations for you. When
     you add a project, we begin monitoring all of its dependencies,
-    creating recommendations for you. The Dashboard summarizes
-    recommendations from all of the projects you are
-    watching.</em></p>
+    creating recommendations for you.</em></p>
 
     <p>
       <a href="@routes.ProjectsController.github()">Add a project</a>
