--- a/api/app/views/emails/dailySummary.scala.html
+++ b/api/app/views/emails/dailySummary.scala.html
@@ -27,7 +27,7 @@
       case n => s"$n new recommendations"
     }}
     since your last summary sent on
-    @io.flow.play.util.DateHelper.longDateTime(lastEmail.get.audit.createdAt).
+    @io.flow.play.util.DateHelper.longDateTime(lastEmail.get.createdAt).
   </p>
 }
 
