--- a/www/app/views/projects/show.scala.html
+++ b/www/app/views/projects/show.scala.html
@@ -10,10 +10,10 @@
 
   <div class="pull-right">
     @if(com.bryzek.dependency.www.lib.Permissions.Project.edit(project, data.user)) {
-      | <a href="@routes.ProjectsController.edit(project.guid)">Edit</a>
+      | <a href="@routes.ProjectsController.edit(project.id)">Edit</a>
     }
     @if(com.bryzek.dependency.www.lib.Permissions.Project.delete(project, data.user)) {
-      | <a class="delete" data-confirm="Are you sure?" href="@routes.ProjectsController.postDelete(project.guid)">Delete</a>
+      | <a class="delete" data-confirm="Are you sure?" href="@routes.ProjectsController.postDelete(project.id)">Delete</a>
     }
   </div>
 
@@ -22,7 +22,6 @@
     <li>Visbility: @project.visibility.toString</li>
     <li>SCMS: @project.scms.toString</li>
     <li>URI: <a href="@project.uri">@project.uri</a></li>
-    <li>@audit(project.audit)</li>
   </ul>
 
   <h3>Recommendations</h3>
@@ -69,7 +68,7 @@
 	      @if(pb.binary.isEmpty) {
   	        @pb.name.toString
   	      } else {
-	        <a href="@routes.BinariesController.show(pb.binary.get.guid)">@pb.name.toString</a>
+	        <a href="@routes.BinariesController.show(pb.binary.get.id)">@pb.name.toString</a>
 	      }
             </td>
             <td>@pb.version</td>
@@ -82,10 +81,10 @@
       @if(binaries.hasPrevious || binaries.hasNext) {
         <ul class="pager">
           @if(binaries.hasPrevious) {
-            <li><a href="@routes.ProjectsController.show(project.guid, recommendationsPage = recommendations.page, binariesPage = binaries.page - 1, librariesPage = libraries.page)">Previous</a></li>
+            <li><a href="@routes.ProjectsController.show(project.id, recommendationsPage = recommendations.page, binariesPage = binaries.page - 1, librariesPage = libraries.page)">Previous</a></li>
           }
           @if(binaries.hasNext) {
-            <li><a href="@routes.ProjectsController.show(project.guid, recommendationsPage = recommendations.page, binariesPage = binaries.page + 1, librariesPage = libraries.page)">Next</a></li>
+            <li><a href="@routes.ProjectsController.show(project.id, recommendationsPage = recommendations.page, binariesPage = binaries.page + 1, librariesPage = libraries.page)">Next</a></li>
           }
         </ul>
       }
@@ -108,7 +107,7 @@
 	      @if(lib.library.isEmpty) {
   	        @lib.groupId.@lib.artifactId
   	      } else {
-	        <a href="@routes.LibrariesController.show(lib.library.get.guid)">@lib.groupId.@lib.artifactId</a>
+	        <a href="@routes.LibrariesController.show(lib.library.get.id)">@lib.groupId.@lib.artifactId</a>
 	      }
             </td>
             <td>@lib.version</td>
@@ -122,10 +121,10 @@
       @if(libraries.hasPrevious || libraries.hasNext) {
         <ul class="pager">
           @if(libraries.hasPrevious) {
-            <li><a href="@routes.ProjectsController.show(project.guid, recommendationsPage = recommendations.page, binariesPage = libraries.page, librariesPage = libraries.page - 1)">Previous</a></li>
+            <li><a href="@routes.ProjectsController.show(project.id, recommendationsPage = recommendations.page, binariesPage = libraries.page, librariesPage = libraries.page - 1)">Previous</a></li>
           }
           @if(libraries.hasNext) {
-            <li><a href="@routes.ProjectsController.show(project.guid, recommendationsPage = recommendations.page, binariesPage = libraries.page, librariesPage = libraries.page + 1)">Next</a></li>
+            <li><a href="@routes.ProjectsController.show(project.id, recommendationsPage = recommendations.page, binariesPage = libraries.page, librariesPage = libraries.page + 1)">Next</a></li>
           }
         </ul>
       }
