--- a/www/app/views/resolvers/table.scala.html
+++ b/www/app/views/resolvers/table.scala.html
@@ -15,7 +15,7 @@
 	    <a href="@routes.OrganizationsController.show(r.organization.get.key)">@{r.organization.get.key}</a>
 	  }
 	</td>
-        <td><a href="@routes.ResolversController.show(r.guid)">@{r.uri}</a></td>
+        <td><a href="@routes.ResolversController.show(r.id)">@{r.uri}</a></td>
       </tr>
     }
   </table>
