--- a/www/app/views/index.scala.html
+++ b/www/app/views/index.scala.html
@@ -29,8 +29,8 @@
 	</thead>
         @recommendations.items.map { rec =>
           <tr>
-            <td>@io.flow.play.util.DateHelper.shortDate(rec.audit.createdAt)</td>
-            <td><a href="@routes.ProjectsController.show(rec.project.guid)">@{rec.project.name}</a></td>
+            <td>@io.flow.play.util.DateHelper.shortDate(rec.createdAt)</td>
+            <td><a href="@routes.ProjectsController.show(rec.project.id)">@{rec.project.name}</a></td>
             <td><a href="@data.urls.recommendation(rec)">@com.bryzek.dependency.lib.Text.truncate(rec.name, 50)</a></td>
             <td>@rec.from</td>
             <td>@rec.to</td>
