--- a/www/app/views/libraries/table.scala.html
+++ b/www/app/views/libraries/table.scala.html
@@ -7,7 +7,7 @@
     <table class="table">
       @libraries.items.map { library =>
         <tr>
-          <td><a href="@routes.LibrariesController.show(library.guid)">@library.groupId.@library.artifactId</td>
+          <td><a href="@routes.LibrariesController.show(library.id)">@library.groupId.@library.artifactId</td>
         </tr>
       }
     </table>
