--- a/www/app/views/projects/edit.scala.html
+++ b/www/app/views/projects/edit.scala.html
@@ -10,9 +10,9 @@
 
   <div class="container">
 
-    @helper.form(action = routes.ProjectsController.postEdit(project.guid)) {
+    @helper.form(action = routes.ProjectsController.postEdit(project.id)) {
 
-      @projectForm(form, orgs, routes.ProjectsController.show(project.guid))
+      @projectForm(form, orgs, routes.ProjectsController.show(project.id))
 
     }
 
