--- a/www/app/views/projects/table.scala.html
+++ b/www/app/views/projects/table.scala.html
@@ -9,7 +9,7 @@
     @projects.map { p =>
       <tr>
         <td><a href="@routes.OrganizationsController.show(p.organization.key)">@{p.organization.key}</a></td>
-        <td><a href="@routes.ProjectsController.show(p.guid)">@{p.name}</a></td>
+        <td><a href="@routes.ProjectsController.show(p.id)">@{p.name}</a></td>
       </tr>
     }
   </table>
