Checkpoint www compiles

--- a/www/app/views/projects/sync.scala.html
+++ b/www/app/views/projects/sync.scala.html
@@ -1,6 +1,6 @@
 @(
   data: com.bryzek.dependency.www.lib.UiData,
-  id: java.util.String,
+  id: String,
   nextN: Int,
   sleepTime: Int,
   syncStarted: Option[com.bryzek.dependency.v0.models.Sync],
