--- a/www/app/views/projects/show.scala.html
+++ b/www/app/views/projects/show.scala.html
@@ -10,7 +10,7 @@
 
   <div class="pull-right">
     @if(com.bryzek.dependency.www.lib.Permissions.Project.edit(project, data.user)) {
-      | <a href="@routes.ProjectsController.edit(project.id)">Edit</a>
+      <a href="@routes.ProjectsController.edit(project.id)">Edit</a>
     }
     @if(com.bryzek.dependency.www.lib.Permissions.Project.delete(project, data.user)) {
       | <a class="delete" data-confirm="Are you sure?" href="@routes.ProjectsController.postDelete(project.id)">Delete</a>
