--- a/www/app/views/binaries/show.scala.html
+++ b/www/app/views/binaries/show.scala.html
@@ -2,13 +2,25 @@
   data: com.bryzek.dependency.www.lib.UiData,
   binary: com.bryzek.dependency.v0.models.Binary,
   versions: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.BinaryVersion],
-  projectBinaries: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.ProjectBinary]
+  projectBinaries: io.flow.play.util.PaginatedCollection[com.bryzek.dependency.v0.models.ProjectBinary],
+  lastCompletedSync: Option[com.bryzek.dependency.v0.models.Sync]
 )(implicit flash: Flash, messages: Messages)
 
 @main(data.copy(title = Some(s"Binary: ${binary.name}"))) {
 
+  <div class="pull-right">
+    <a href="@routes.SyncsController.postBinariesById(binary.id)" class="btn btn-primary btn-sm active postForm" role="button">Sync</a>
+  </div>
+
   <ul>
     <li>Name: @binary.name</li>
+    <li>Last synced:
+      @if(lastCompletedSync.isEmpty) {
+        <em>pending</em>
+      } else {
+        @io.flow.play.util.DateHelper.longDateTime(lastCompletedSync.get.createdAt)
+      }
+    </li>
   </ul>
 
   @views.html.binaries.versions.table(versions)
